@startuml

' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity User {
   * pk <<generated>>
   ---
   * username: Char Field
}

entity Workout {
   * pk <<generated>>
   ---
     name : Char Field
   * Exercises <<OneToMany>>
   * User <<FK>>
   * created  : Date-Time Field
   * modified : Date-Time Field
}

entity Exercise {
   * pk <<generated>>
   ---
   * exercise_number : Int Field
   * exercise_type <<FK>>
   * sets <<OneToMany>>
     rpe    : Int Field
}

entity ExerciseType {
   * pk <<generated>>
   ---
   * name : Char Field
   * User <<FK>>
}

entity Set {
   * pk <<generated>>
   ---
   * set_number: : Int Field
   * weight : Int Field
   * reps   : Int Field
   
}

entity Template {
   * pk <<generated>>
   ---
   * name : Char Field
   * workouts <<OneToMany>>
     description : Char Field
   * User <<FK>>
}

' Workout is related to exactly one User, User has zero or many workouts
Workout }o--|| User
' Workout is related to one or many Exercise instances and A Exercise is related to exactly one Workout instance 
Workout ||--|{ Exercise
' Exercise has exactly one ExerciseType but ExerciseType can be related to many Exercise instances
Exercise }o--|| ExerciseType
' an Exercise has one or many sets, a Set is only related to one Exercise
Exercise ||--|{ Set
' a Template has one or many Workouts, a Workout is only related to one Template
Template |o--|{ Workout
' Template is related to exactly one User, User has zero or many Templates
Template }o--|| User
@enduml